--- a/PROFESSOR/classes/tools/databaseSyllabus.html
+++ b/PROFESSOR/classes/tools/databaseSyllabus.html
@@ -17,16 +17,10 @@
         <meta charset="utf-8">
         <title>Courses</title>
         <link rel="stylesheet" type="text/css" href="../../../style.css">
-<script type="text/javascript" src="pdf.js"></script>
-
+        <script type="text/javascript" src="pdf.js"></script>
     </head>
     
-    <script>
-      function goBack() 
-      {
-        window.history.back();
-      }
-    </script>
+    <script type="text/javascript" src="scripting.js"></script>
 
     <body>
 
@@ -38,7 +32,6 @@
                 <!-- logout button -->
                 <form class="logoutFormCourses" name="signOut" action="../../../index.html" method="get" accept-charset="utf-8">
                   <input class="logoutButtonCourses" type="submit" value="Logout">
-                  <script language="javascript">DisableBackButton();</script>
                 </form>
 
                 <input class="studentName" type="submit" value="Professor 1"></input>
