--- a/PROFESSOR/classes/databaseHomepage.html
+++ b/PROFESSOR/classes/databaseHomepage.html
@@ -21,12 +21,7 @@
 
     <body>
 
-        <script>
-          function goBack() 
-          {
-            window.history.back();
-          }
-        </script>
+        <script type="text/javascript" src="scripting.js"></script>
 
         <div class="header-wrapper">
             <div class="headerClass">
@@ -79,18 +74,5 @@
                 <input class="addUpdateButton" type="submit" value="Submit" style="position: absolute; bottom: 8px;right: 8px;" onclick="hide()">
             </div>
         </div>
-
-        <!-- script for updates -->
-        <script>
-            function show() {
-                document.getElementById('submitUpdate').style.display = "block";
-            }
-
-            function hide() {
-                document.getElementById('submitUpdate').style.display = "none";
-                var newUpdate = document.getElementById('profUpdate').value;
-                document.getElementById('update').innerHTML = newUpdate;
-            }
-        </script>
     </body>
 </html>
