--- a/PROFESSOR/classes/softwareHomepage.html
+++ b/PROFESSOR/classes/softwareHomepage.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" type="text/css" href="../../style.css">
     </head>
     
-    <script type="text/javascript" src="scripting.js"></script>
+    <script type="text/javascript" src="../../scripting.js"></script>
 
     <body>
 
