--- a/STUDENT/classes/databaseHomepage.html
+++ b/STUDENT/classes/databaseHomepage.html
@@ -21,7 +21,7 @@
 
     <body>
     
-        <script type="text/javascript" src="scripting.js"></script>
+        <script type="text/javascript" src="../../scripting.js"></script>
     
         <div class="header-wrapper">
             <div class="headerClass">
