--- a/STUDENT/classes/softwareHomepage.html
+++ b/STUDENT/classes/softwareHomepage.html
@@ -22,7 +22,7 @@
 
     <body>
     
-        <script type="text/javascript" src="scripting.js"></script>
+        <script type="text/javascript" src="../../scripting.js"></script>
     
         <div class="header-wrapper">
             <div class="headerClass">
