--- a/professor/classes/tools/networkSyllabus.html
+++ b/professor/classes/tools/networkSyllabus.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="pdf.js"></script>
     </head>
     
-    <script type="text/javascript" src="scripting.js"></script>
+    <script type="text/javascript" src="../../../scripting.js"></script>
 
     <body>
 
