--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -122,6 +122,7 @@
             var busCount = 1;
 
             function searchFor(){
+                window.alert("r");
                 foundWord = "";
                 searchFor = "";
                 searchFor = document.getElementById("searchFor").value;
@@ -188,7 +189,6 @@
             }
 
             function register() {
-                
                 if (accCount == 0){
                     document.getElementById("class1").innerHTML = "Accounting Principles I";
                     document.getElementById('class1').style.color = '#383838';
