Working On Style Improvements

--- a/STUDENT/coursesHomepage.html
+++ b/STUDENT/coursesHomepage.html
@@ -58,7 +58,7 @@
                 <li><a class="classLinksCourses" id="class5"></a></li>
                 <li><a class="classLinksCourses" id="class6"></a></li>
             </ul>
-            <button type="button" onclick="drop()"> Drop a Class </button>
+            <button type="button" name="dropClass" onclick="drop()"> Drop a Class </button>
         </div>
 
         <div class="coursesListDrop" id="coursesListDrop" style="display: none">
@@ -76,7 +76,7 @@
                 <li><a id="ten" class="classLinksCourses" id="class5Drop"></a></li>
                 <li><a id="eleven" class="classLinksCourses" id="class6Drop"></a></li>
             </ul>
-            <button type="button" onclick="dropClasses()">Drop Class(es)</button>
+            <button type="button" name="dropNow" onclick="dropClasses()">Drop Class(es)</button>
         </div>
 
         <div>
